[tool.poetry]
name = "volunteer-management"
version = "0.1.0"
description = ""
authors = ["KaioMendonca <kaiomendonca.dev@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
sqlalchemy = "^2.0.48"
pydantic = {extras = ["email"], version = "^2.12.5"}
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.7,<0.16.0)"
]

[tool.taskipy.tasks]
test = "pytest"
lint = "ruff check ."
format = "ruff format ."