[tool.poetry]
name = "volunteer-management"
version = "0.1.0"
description = ""
authors = ["KaioMendonca <kaiomendonca.dev@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
sqlalchemy = "^2.0.48"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
